Fix Dockerfile node express not linking

--- a/dockerfiles/node/Dockerfile
+++ b/dockerfiles/node/Dockerfile
@@ -3,16 +3,15 @@ FROM node:8-alpine
 # Create app directory
 WORKDIR /app
 
-RUN npm install -g express@4.16.1 && \
-    npm link express
+RUN npm install -g express
 
 # Bundle app source
 COPY . .
 
 RUN npm install --only=production
+RUN npm link express
 
 #Your app binds to port 8080 so you'll use the EXPOSE instruction to have it mapped by the docker daemon:
 EXPOSE 8080
 
-CMD [ "node", "server.js" ]
-
+CMD [ "node", "./server.js" ]
